[gd_scene load_steps=6 format=4 uid="uid://csogx130vrqm3"]

[ext_resource type="Shader" uid="uid://b0kyv8uyamyri" path="res://shaders/blur.gdshader" id="1"]
[ext_resource type="Script" uid="uid://dd223vy38gt27" path="res://scenes/steam_store_screenshot.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://ctd0qhiaqmdqt" path="res://textures/icons/token.png" id="3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dkxwv"]
shader = ExtResource("1")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_spm67"]
bg_color = Color(0.0862745, 0.101961, 0.137255, 1)
border_color = Color(0.270588, 0.333333, 0.458824, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.254902)
shadow_size = 6

[node name="ColorRect" type="ColorRect"]
material = SubResource("ShaderMaterial_dkxwv")
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2")
premium = "steam_daily_tokens"

[node name="PremiumPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -100.0
offset_right = 400.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"OverlayPanel"
theme_override_styles/panel = SubResource("StyleBoxFlat_spm67")

[node name="IconPanel" type="Panel" parent="PremiumPanel"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = -10.0
mouse_filter = 2
theme_type_variation = &"BackPanel"

[node name="Icon" type="TextureRect" parent="PremiumPanel/IconPanel"]
self_modulate = Color(0.567, 0.69465, 0.9, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -46.0
offset_right = 47.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(35, 35)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3")
expand_mode = 1

[node name="InfoContainer" type="VBoxContainer" parent="PremiumPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 160.0
offset_top = 10.0
offset_right = -18.0
offset_bottom = 190.0
grow_horizontal = 2
mouse_filter = 2
alignment = 1

[node name="Name" type="Label" parent="PremiumPanel/InfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Daily Tokens"

[node name="Description" type="Label" parent="PremiumPanel/InfoContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0.686275, 0.34902, 1)
theme_override_constants/line_spacing = 0
text = "• Instantly receive 1400 Tokens
• Instantly receive 1400 Tokens
• Instantly receive 1400 Tokens"
vertical_alignment = 1
autowrap_mode = 3
